# CHIP8Emulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: googletest.yml
chip-8/: CMakeLists.txt
chip-8/doc/: Doxyfile
chip-8/include/: chip8.hpp  chip8constants.hpp  chip8machine.hpp  chip8types.hpp  display.hpp  libretro.h  memory.hpp  programcounter.hpp  register.hpp  upscaler.hpp  utilities.hpp
chip-8/src/: chip8.cpp  chip8machine.cpp  decoder.cpp  display.cpp  libretro.cpp  memory.cpp  programcounter.cpp  register.cpp  test_rom.cpp  upscaler.cpp  utilities.cpp
chip-8/tests/: CMakeLists.txt  chip8-test.cpp  chip8-tests.cpp  chip8machine-test.cpp  chip8machinetester.cpp  chip8machinetester.hpp  decoder-test.cpp  display-test.cpp  libretro-test.cpp  memory-test.cpp  programcounter-test.cpp  register-test.cpp  test-constants.hpp  utilities-test.cpp  utilities.cpp  utilities.hpp
